	PR 5328 	* opncls.c (separate_debug_file_exists): Use fopen/fread 	rather than open/read and open in binary mode.